--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
     --sidebar-border: 217.2 32.6% 17.5%;
     --sidebar-ring: 224.3 76.3% 48%;
 
-    --landing-gradient: hsl(222 47% 11%);
+    --landing-gradient: linear-gradient(to bottom, hsl(var(--sidebar-background)), hsla(var(--sidebar-background), 0.9));
   }
 
   .dark {
